generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

// ─── Identity & Access ─────────────────────────────────────────────────────

model User {
  id            String        @id @default(uuid())
  username      String?       @unique
  passwordHash  String
  fullName      String
  email         String?
  phone         String?
  status        UserStatus    @default(ACTIVE)
  createdAt     DateTime      @default(now())
  updatedAt     DateTime      @updatedAt

  userRoles     UserRole[]
  refreshTokens RefreshToken[]
  auditLogs     AuditLog[]    @relation("AuditLogActor")
  examinations  Examination[] @relation("DoctorExaminations")
  createdVisits Visit[]       @relation("VisitCreatedBy")
}

model Role {
  id          String   @id @default(uuid())
  code        String?  @unique
  name        String
  description String?
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt

  userRoles       UserRole[]
  rolePermissions RolePermission[]
}

model Permission {
  id          String   @id @default(uuid())
  code        String   @unique
  name        String
  description String?
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt

  rolePermissions RolePermission[]
}

model UserRole {
  userId    String
  roleId    String
  createdAt DateTime @default(now())

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)
  role Role @relation(fields: [roleId], references: [id], onDelete: Cascade)

  @@id([userId, roleId])
}

model RolePermission {
  roleId       String
  permissionId String

  role       Role       @relation(fields: [roleId], references: [id], onDelete: Cascade)
  permission Permission @relation(fields: [permissionId], references: [id], onDelete: Cascade)

  @@id([roleId, permissionId])
}

model RefreshToken {
  id        String    @id @default(uuid())
  userId    String
  tokenHash String
  revokedAt DateTime?
  expiresAt DateTime
  createdAt DateTime  @default(now())

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([userId])
  @@index([tokenHash])
}

model AuditLog {
  id         String   @id @default(uuid())
  actorId    String?
  action     String
  entityType String
  entityId   String?
  before     Json?
  after      Json?
  createdAt  DateTime @default(now())

  actor User? @relation("AuditLogActor", fields: [actorId], references: [id])

  @@index([entityType, entityId])
  @@index([actorId])
}

// ─── Clinical ──────────────────────────────────────────────────────────────

model Patient {
  id          String    @id @default(uuid())
  patientCode String    @unique
  fullName    String
  dob         DateTime?
  gender      String?
  phone       String?
  citizenId   String?   @unique
  address     String?
  createdAt   DateTime  @default(now())
  updatedAt   DateTime  @updatedAt
  visits      Visit[]

  @@index([fullName])
  @@index([phone])
}

model Visit {
  id              String       @id @default(uuid())
  patientId       String
  visitDate       DateTime     @db.Date
  queueNumber     Int
  reason          String?
  status          VisitStatus  @default(REGISTERED)
  createdByUserId String
  createdAt       DateTime     @default(now())
  updatedAt       DateTime     @updatedAt
  examination     Examination?
  invoice         Invoice?
  createdByUser   User         @relation("VisitCreatedBy", fields: [createdByUserId], references: [id])
  patient         Patient      @relation(fields: [patientId], references: [id])

  @@unique([visitDate, queueNumber])
  @@unique([patientId, visitDate])
  @@index([visitDate])
  @@index([status])
}

model Examination {
  id            String            @id @default(uuid())
  visitId       String            @unique
  doctorUserId  String
  symptoms      String?
  clinicalNotes String?
  conclusion    String?
  status        ExaminationStatus @default(OPEN)
  completedAt   DateTime?
  createdAt     DateTime          @default(now())
  updatedAt     DateTime          @updatedAt
  diagnoses     Diagnosis[]
  doctor        User              @relation("DoctorExaminations", fields: [doctorUserId], references: [id])
  visit         Visit             @relation(fields: [visitId], references: [id])
  prescription  Prescription?
}

model Disease {
  id        String      @id @default(uuid())
  code      String      @unique
  name      String
  isActive  Boolean     @default(true)
  createdAt DateTime    @default(now())
  updatedAt DateTime    @updatedAt
  diagnoses Diagnosis[]

  @@index([isActive])
}

model Diagnosis {
  id            String      @id @default(uuid())
  examinationId String
  diseaseId     String?
  name          String
  isPrimary     Boolean     @default(false)
  createdAt     DateTime    @default(now())
  disease       Disease?    @relation(fields: [diseaseId], references: [id])
  examination   Examination @relation(fields: [examinationId], references: [id], onDelete: Cascade)

  @@index([examinationId])
}

model Drug {
  id                String             @id @default(uuid())
  name              String             @unique
  unit              String
  price             Decimal            @db.Decimal(12, 2)
  isActive          Boolean            @default(true)
  createdAt         DateTime           @default(now())
  updatedAt         DateTime           @updatedAt
  prescriptionItems PrescriptionItem[]

  @@index([isActive])
}

model Prescription {
  id            String             @id @default(uuid())
  examinationId String             @unique
  note          String?
  createdAt     DateTime           @default(now())
  updatedAt     DateTime           @updatedAt
  examination   Examination        @relation(fields: [examinationId], references: [id])
  items         PrescriptionItem[]
}

model PrescriptionItem {
  id             String       @id @default(uuid())
  prescriptionId String
  drugId         String
  quantity       Int
  dosage         String
  unitPrice      Decimal      @db.Decimal(12, 2)
  lineTotal      Decimal      @db.Decimal(12, 2)
  createdAt      DateTime     @default(now())
  drug           Drug         @relation(fields: [drugId], references: [id])
  prescription   Prescription @relation(fields: [prescriptionId], references: [id], onDelete: Cascade)

  @@unique([prescriptionId, drugId])
}

model Invoice {
  id          String        @id @default(uuid())
  visitId     String        @unique
  totalAmount Decimal       @db.Decimal(12, 2)
  paidAmount  Decimal       @default(0) @db.Decimal(12, 2)
  status      InvoiceStatus @default(DRAFT)
  createdAt   DateTime      @default(now())
  updatedAt   DateTime      @updatedAt
  visit       Visit         @relation(fields: [visitId], references: [id])
  items       InvoiceItem[]
  payments    Payment[]

  @@index([status])
}

model InvoiceItem {
  id          String   @id @default(uuid())
  invoiceId   String
  description String
  quantity    Int
  unitPrice   Decimal  @db.Decimal(12, 2)
  lineTotal   Decimal  @db.Decimal(12, 2)
  createdAt   DateTime @default(now())
  invoice     Invoice  @relation(fields: [invoiceId], references: [id], onDelete: Cascade)
}

model Payment {
  id        String        @id @default(uuid())
  invoiceId String
  amount    Decimal       @db.Decimal(12, 2)
  method    PaymentMethod
  note      String?
  paidAt    DateTime      @default(now())
  createdAt DateTime      @default(now())
  invoice   Invoice       @relation(fields: [invoiceId], references: [id], onDelete: Cascade)
}

model RegulationVersion {
  id          String           @id @default(uuid())
  isActive    Boolean          @default(false)
  activatedAt DateTime?
  note        String?
  createdAt   DateTime         @default(now())
  items       RegulationItem[]

  @@index([isActive])
}

model RegulationItem {
  id        String            @id @default(uuid())
  versionId String
  key       String
  value     String
  version   RegulationVersion @relation(fields: [versionId], references: [id], onDelete: Cascade)

  @@unique([versionId, key])
}

// ─── Enums ─────────────────────────────────────────────────────────────────

enum UserStatus {
  ACTIVE
  INACTIVE
  LOCKED
}

enum VisitStatus {
  REGISTERED
  WAITING
  IN_EXAMINATION
  COMPLETED
  CANCELLED
}

enum ExaminationStatus {
  OPEN
  COMPLETED
  CANCELLED
}

enum InvoiceStatus {
  DRAFT
  ISSUED
  PARTIALLY_PAID
  PAID
  VOID
}

enum PaymentMethod {
  CASH
  TRANSFER
  CARD
}
